[tool.poetry]
name = "scan_engine"
version = "0.1.0"
description = "Parameter scan engine"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
repository = "https://github.com/loiccoyle/scan_engine"
readme = "README.md"
keywords = ["parameter-scan", "scan", "parameter", "combination"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-pylint = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
